Fixing image width to keep from stretching

--- a/pStyleAbout.css
+++ b/pStyleAbout.css
@@ -25,8 +25,14 @@ a:hover { color:#4D6A6D; font-style:italic; transition: 0.2s ease;}
     justify-content: center;
 }
 
+.imageBox {
+    height: 300px; 
+    width: 300px; 
+    overflow: hidden;
+}
+
 img {
-    width:25%;
+    width:500px;
     margin-left:1%;
 }
 
@@ -34,7 +40,6 @@ img {
     display:block;
     background-color:#C9ADA1;
     width:200px;
-    length:200px;
     margin-left:20%;
 }
 
